--- a/static/global.css
+++ b/static/global.css
@@ -13,8 +13,8 @@
     --font-style-extra-bold: extra-bold;
 
     /* COLORS */
-    --background-color: #ffffff;
-    --paper-color: #f5f5f5;
+    --background-color: #f2eee5;
+    --paper-color: #e2dccb;
     --img-text-background-color: #00000080;
     --text-color: #000000;
     --alt-text-color: #757575;
